fix: fix wrong font family token name

--- a/packages/nomimono-css/scss/component/_badge.scss
+++ b/packages/nomimono-css/scss/component/_badge.scss
@@ -1,5 +1,5 @@
 .#{$prefix}badge {
-	font-family: var(--font-family-secondary);
+	font-family: var(--ffml-secondary);
 	font-size: var(--fs-2);
 	font-weight: 600;
 	display: inline-flex;
