--- a/packages/nomimono-css/scss/component/_breadcrumb.scss
+++ b/packages/nomimono-css/scss/component/_breadcrumb.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	font-weight: 500;
-	font-family: var(--font-family-secondary);
+	font-family: var(--ffml-secondary);
 
 	.#{$prefix}breadcrumb-item {
 		position: relative;
